# GStreamerTest

./: .gitignore  CMakeLists.txt  README.md  gstreamertest.pc.in  main.cpp
cmake/: FindGLib2.cmake  FindGObject2.cmake  FindGStreamer.cmake
source/applications/app/: CMakeLists.txt
source/applications/app/src/: main.cpp
source/components/: CMakeLists.txt
source/components/gstreamer++/: CMakeLists.txt
source/components/gstreamer++/export/gstreamer++/: application.h  bin.h  buffer.h  bus.h  caps.h  element.h  elementfactory.h  error.h  errorlist.h  event.h  message.h  messagebus.h  pad.h  pipeline.h  query.h  registry.h  serialization.h  signal.h
source/components/gstreamer++/src/: application.cpp  bin.cpp  bus.cpp  element.cpp  elementfactory.cpp  message.cpp  pipeline.cpp  registry.cpp
source/components/gstreamer++/test/: CMakeLists.txt
source/components/gstreamer++/test/src/: main.cpp
source/components/gstreamer++/test/src/test/: ApplicationTest.cpp
