project(gstreamer++)

include(setup_target_properties_library)
include(show_target_properties)

message("Setting up gstreamer++")

set(COMPONENTS_GSTREAMERPP_DEFINITIONS
    CACHE INTERNAL "${PROJECT_NAME}: Definitions" FORCE)

set(COMPONENTS_GSTREAMERPP_DEPENDENCIES
    )

set(COMPONENTS_GSTREAMERPP_INCLUDE
    ${GOBJECT_INCLUDE_DIR}
    ${GSTREAMER_INCLUDE_DIRS}
    export
    include
    CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

set(COMPONENTS_GSTREAMERPP_LIBS
    ${CMAKE_THREAD_LIBS_INIT}
    ${CMAKE_DL_LIBS}
    ${GOBJECT_LIBRARIES}
    ${GSTREAMER_LIBRARIES}
    ${GSTREAMER_BASE_LIBRARIES}
    ${GSTREAMER_APP_LIBRARIES}
    CACHE INTERNAL "${PROJECT_NAME}: Link libraries" FORCE)

file(GLOB COMPONENTS_GSTREAMERPP_INCLUDES_EXTERNAL export/*.h)
file(GLOB COMPONENTS_GSTREAMERPP_INCLUDES_LOCAL include/*.h)
file(GLOB COMPONENTS_GSTREAMERPP_SOURCES src/*.cpp)

#if (INSTALL_HEADERS_TO_TARGET)
#    install(FILES ${COMPONENTS_GSTREAMERPP_INCLUDES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/cppsdk/generics)
#else()
#    foreach(path ${CMAKE_FIND_ROOT_PATH})
#        file(COPY ${COMPONENTS_GSTREAMERPP_INCLUDES} DESTINATION ${path}/usr/include/cppsdk/generics)
#    endforeach()
#endif()

set(COMPONENTS_GSTREAMERPP_INPUT
    ${COMPONENTS_GSTREAMERPP_SOURCES}
    ${COMPONENTS_GSTREAMERPP_INCLUDES_EXTERNAL}
    ${COMPONENTS_GSTREAMERPP_INCLUDES_LOCAL}
    CACHE INTERNAL "${PROJECT_NAME}: Source files" FORCE)

add_library(${PROJECT_NAME} ${COMPONENTS_GSTREAMERPP_INPUT})
target_compile_definitions(${PROJECT_NAME} PRIVATE ${COMPONENTS_GSTREAMERPP_DEFINITIONS})
target_include_directories(${PROJECT_NAME} PUBLIC ${COMPONENTS_GSTREAMERPP_INCLUDE})
target_link_libraries(${PROJECT_NAME} PUBLIC ${COMPONENTS_GSTREAMERPP_LIBS})
#add_dependencies(${PROJECT_NAME} ${COMPONENTS_GSTREAMERPP_DEPENDENCIES})
set_target_properties(${PROJECT_NAME} PROPERTIES DEFINE_SYMBOL COMPONENTS_GSTREAMER)
#set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION ${GSTREAMER_TEST_VERSION})

setup_target_properties_library(${PROJECT_NAME})

show_target_properties(${PROJECT_NAME})

install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

add_subdirectory(test)
